2001-11-24  Kevin Vandersloot <kfv101@psu.edu>

	* gnomine.c, clock.[c,h]: bring back the clock
	functionality

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnomine.desktop: Added traditional Chinese translation.

2001-07-10  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnomine.c (main): Set windows policy to allow_shrink and
	  allow_grow.

2001-07-06  Juan Pablo Mendoza <pablo_juan@yahoo.com>

       * gnomine.c:
       * minefield.c: So long Imlib, hello GdkPixbuf!

2001-07-05  Christian Rose  <menthos@menthos.com>

	* gnomine.desktop: Modified Swedish entries.

2001-06-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnomine.c: (focus_out_cb), (resume_game_cb): New functions.
	  (new_game): Hide button and show minefield.
	  (main): Create the resume button, connect signal to
	  focus_out_event (Feature taken from kmines).

2001-06-12  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* minefield.c (gtk_minefield_motion_notify): We was passing for 1
	  the minefield size.

2001-06-06  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* minefield.c (gtk_minefield_button_press), 
	  (gtk_minefield_button_release): If we get button 1 click + shift
	  do a "multi press". Implent "bug" #50327.
	
2001-06-03  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* gnomine.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.
	* minefield.c (gtk_minefield_motion_notify): Don't do anything if
	  x/y passes the minefiled boundarys, to a fix crash bug.

2000-05-12  andreas Hyden  <a.hyden@cyberpoint.se>

	* gnomine.desktop: Added Swedish translation.

2000-05-06  Karl Eichwalder  <ke@suse.de>

	* gnomine.desktop: Improve de.

1999-03-12  Ian Peters  <itp@gnu.org>

	* gnomine.c (about): Now can only create one about dialog, which is
	set_parented to the main window

1999-03-12  Ian Peters  <itp@gnu.org>

	* gnomine.c (lots of stuff): Moved gnomine to use a propbox for
	configuration.

1999-02-13  Ian Peters  <ipeters@acm.org>
